--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,11 @@ body {
   margin: 0;
 }
 
+img {
+  width: 200px;
+  height: auto;
+}
+
 .main-grid {
   display: grid;
   grid-template-rows: 20px, auto;
@@ -36,6 +41,7 @@ h1 {
 h2 {
   margin-top: 10px;
   font-size: 1.2rem;
+  text-align: center;
 }
 
 ul {
@@ -53,6 +59,10 @@ li {
   padding: 10px;
   border: solid 2px var(--red);
   border-radius: 5px;
+  max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .flex {
