--- a/src/App.scss
+++ b/src/App.scss
@@ -25,7 +25,7 @@ img {
 
 .main-grid {
   display: grid;
-  grid-template-rows: 20px, auto;
+  grid-template-rows: 60px auto;
   height: 100vh;
 }
 
@@ -75,4 +75,38 @@ li {
   display: block;
   height: 15px;
   content: '';
+}
+
+.flex-row {
+  display: flex;
+  justify-content: space-around;
+}
+
+.form {
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.p-10 {
+  padding: 10px;
+}
+.input {
+  width: 150px;
+  margin: 10px;
+}
+
+.button {
+  background: var(--red);
+  color: var(--textcolor);
+  border: none;
+}
+
+.nav-item {
+  width: 40px;
+}
+.nav-img {
+  width: 40px;
+  height: auto;
 }
