Add basic styling for order form

--- a/src/App.scss
+++ b/src/App.scss
@@ -111,6 +111,10 @@ a {
   text-decoration: none;
 }
 
+select {
+  font-family: 'Quicksand', sans-serif;
+}
+
 .nav-item {
   width: 40px;
   padding: 2px;
