Use logged in customer ID for ordering

--- a/src/App.scss
+++ b/src/App.scss
@@ -107,6 +107,11 @@ select {
   background: var(--red);
   color: var(--textcolor);
   border: none;
+
+  &:disabled {
+    background: darkslategray;
+    color: gray;
+  }
 }
 
 .nav-item {
